--- a/benches/compute-benches/Cargo.toml
+++ b/benches/compute-benches/Cargo.toml
@@ -20,8 +20,9 @@ krnl = { workspace = true, default-features = false }
 ocl = { version = "0.19.4", optional = true }
 qutex = { version = "=0.2.3", optional = true }
 rand = "0.8.5"
-#autograph = { git = "https://github.com/charles-r-earp/autograph", branch = "krnl-bench-ext", optional = true }
-autograph = { path = "../../../autograph", optional = true }
+# added upload without alloc
+# this doesn't improve upload perf though
+autograph = { git = "https://github.com/charles-r-earp/autograph", branch = "krnl-bench-ext", optional = true }
 blocker = { version = "0.1.2", features = ["thread_yield"], optional = true }
 
 [features]
