--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,12 +32,13 @@ jobs:
 #      run: cargo build -v
 #    - name: test
 #      run: cargo test --no-default-features -p krnl -p krnlc-tests -v -- --format=terse
-    - name: build krnlc
-      run: |
-        cd krnl 
-        cargo install --debug --path . --root .
+    - uses: actions-rs/toolchain@v1
+        with:
+            toolchain: nightly-2023-01-21
+            override: true
+            components: rust-src rustc-dev llvm-tools-preview
     - name: krnlc check 
-      run: ./krnlc/krnlc --check -p krnl -p krnlc tests -p compute-benchmarks
+      run: cargo run --manifest-path krnlc/Cargo.toml -- --check -p krnl -p krnlc tests -p compute-benchmarks
 
 #  lint: 
 #    runs-on: ubuntu-latest
