--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
       with:
         toolchain: nightly-2023-01-21
         override: true
-        components: rust-src rustc-dev llvm-tools-preview
+        components: rust-src, rustc-dev, llvm-tools-preview
     - name: krnlc check 
       run: cargo run --manifest-path krnlc/Cargo.toml -- --check -p krnl -p krnlc tests -p compute-benchmarks
 
