--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
         override: true
         components: rust-src, rustc-dev, llvm-tools-preview
     - name: krnlc check 
-      run: cargo run --manifest-path krnlc/Cargo.toml -- --check -p krnl -p krnlc tests -p compute-benchmarks
+      run: cargo run --manifest-path krnlc/Cargo.toml -v -- --check -p krnl -p krnlc-tests -p compute-benchmarks -v
 
 #  lint: 
 #    runs-on: ubuntu-latest
