--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,10 +32,10 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-#          - os: windows-latest
-#            target: x86_64-pc-windows-msvc
-#          - os: macos-latest
-#            target: x86_64-apple-darwin 
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+          - os: macos-latest
+            target: x86_64-apple-darwin 
     # spirv tools install copied from https://github.com/EmbarkStudios/rust-gpu/blob/main/.github/workflows/ci.yaml
     steps:
       - uses: actions/checkout@v2
@@ -81,15 +81,20 @@ jobs:
         run: cargo +nightly-2023-01-21 build --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v
       - name: krnlc check 
         run: cargo +nightly-2023-01-21 run --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -- --check -p krnl -p krnlc-tests -p compute-benchmarks -v
-
-
-#  lint: 
-#    runs-on: ubuntu-latest
-#    env:
-#      RUST_BACKTRACE: 1
-#      CARGO_INCREMENTAL: 0
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: lint
-#      run: cargo xtask lint -v
-#  cargo-deny:##    runs-on: ubuntu-latest##    steps:##      - uses: actions/checkout@v2##      - uses: EmbarkStudios/cargo-deny-action@v1##      - uses: EmbarkStudios/cargo-deny-action@v1##        with:##          arguments: --manifest-path crates/krnlc/Cargo.toml
+  lint: 
+    runs-on: ubuntu-latest
+    env:
+      RUST_BACKTRACE: 1
+      CARGO_INCREMENTAL: 0
+    steps:
+    - uses: actions/checkout@v2
+    - name: lint
+      run: cargo xtask lint -v
+  cargo-deny:    
+    runs-on: ubuntu-latest##    
+    steps:
+    - uses: actions/checkout@v2
+    - uses: EmbarkStudios/cargo-deny-action@v1
+    - uses: EmbarkStudios/cargo-deny-action@v1
+      with:         
+        arguments: --manifest-path krnlc/Cargo.toml
