--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,7 +90,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
       with:
-        toolchain: [stable, nightly-2023-01-21]
+        toolchain: stable, nightly-2023-01-21
         components: rustfmt, clippy
     - name: fmt
       run: cargo fmt --check
