--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,10 +66,10 @@ jobs:
         run: echo "$HOME/spirv-tools/install/bin" >> $env:GITHUB_PATH
       # end install spirv-tools
       - uses: actions/checkout@v2
-      - name: build
-        run: cargo build -v
-      - name: test
-        run: cargo test --no-default-features -p krnl -p krnlc-tests -v -- --format=terse
+#      - name: build
+#        run: cargo build -v
+#      - name: test
+#        run: cargo test --no-default-features -p krnl -p krnlc-tests -v -- --format=terse
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
@@ -78,7 +78,7 @@ jobs:
           toolchain: nightly-2023-01-21
           components: rust-src, rustc-dev, llvm-tools-preview
       - name: build krnlc
-        run: cargo +nightly-2023-01-21 build --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v
+        run: cargo +nightly-2023-01-21 build --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -vv
       - name: krnlc check 
         run: cargo +nightly-2023-01-21 run --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -- --check -p krnl -p krnlc-tests -p compute-benchmarks -v
   lint: 
