--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,9 +68,11 @@ jobs:
       - uses: actions/checkout@v2
 #      - name: build
 #        run: cargo build -v
+#        continue-on-error: true
 #      - name: test
 #        run: cargo test --no-default-features -p krnl -p krnlc-tests -v -- --format=terse
-      - uses: actions-rs/toolchain@v1
+#        continue-on-error: true
+        - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
       - uses: actions-rs/toolchain@v1
@@ -98,14 +100,18 @@ jobs:
         components: rustfmt, clippy
     - name: fmt
       run: cargo fmt --check
+      continue-on-error: true
     - name: clippy
       run: cargo clippy  
+      continue-on-error: true
     - name: krnlc fmt
       run: cargo +nightly-2023-01-21 fmt --check --manifest-path krnlc/Cargo.toml
+      continue-on-error: true
     - name: krnlc clippy
       run: cargo +nightly-2023-01-21 clippy -Dwarnings --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v
   cargo-deny:    
     runs-on: ubuntu-latest    
+    continue-on-error: true
     steps:
     - uses: actions/checkout@v2
     - uses: EmbarkStudios/cargo-deny-action@v1
