--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,7 +80,7 @@ jobs:
           toolchain: nightly-2023-01-21
           components: rust-src, rustc-dev, llvm-tools-preview
       - name: install krnlc
-        run: cargo +nightly-2023-01-21 install --path krnlc --root . --no-default-features --features use-installed-tools -vv
+        run: cargo +nightly-2023-01-21 install --path krnlc --root . --no-default-features --features use-installed-tools -vv --debug
       - name: krnlc check 
         run: ./bin/krnlc --check -p krnl -p krnlc-tests -p compute-benchmarks -v
   lint: 
@@ -97,7 +97,7 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly-2023-01-21
-        components: rustfmt, clippy
+        components: rustfmt, clippy, rust-src, rustc-dev, llvm-tools-preview
     - name: fmt
       run: cargo fmt --check
       continue-on-error: true
@@ -109,6 +109,11 @@ jobs:
       continue-on-error: true
     - name: krnlc clippy
       run: cargo +nightly-2023-01-21 clippy --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v -- -D warnings
+      continue-on-error: true
+    - uses: actions-rs/clippy-check@v1
+      with:
+        toolchain: nightly-2023-01-21
+        args: "--manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v -- -D warnings"
   cargo-deny:    
     runs-on: ubuntu-latest    
     continue-on-error: true
