--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -31,4 +31,5 @@ serde = { workspace = true, default-features = false, features = ["derive"] }
 derive_more = { workspace = true, default-features = false, features = ["is_variant"] }
 rustversion.workspace = true
 fxhash.workspace = true
+semver = "1.0.17"
 
