--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,12 +66,12 @@ jobs:
         run: echo "$HOME/spirv-tools/install/bin" >> $env:GITHUB_PATH
       # end install spirv-tools
       - uses: actions/checkout@v2
-#      - name: build
-#        run: cargo build -v
-#        continue-on-error: true
-#      - name: test
-#        run: cargo test --no-default-features -p krnl -p krnlc-tests -v -- --format=terse
-#        continue-on-error: true
+      - name: build
+        run: cargo build -v
+        continue-on-error: true
+      - name: test
+        run: cargo test --no-default-features -p krnl -p krnlc-tests -v -- --format=terse
+        continue-on-error: true
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
@@ -83,6 +83,27 @@ jobs:
         run: cargo +nightly-2023-01-21 install --path krnlc --root . --no-default-features --features use-installed-tools -vv --debug
       - name: krnlc check 
         run: ./bin/krnlc --check -p krnl -p krnlc-tests -p compute-benchmarks -v
+  miri:
+    runs-on: ubuntu-latest
+    RUST_BACKTRACE: 1
+    CARGO_INCREMENTAL: 0
+    continue-on-error: true
+    steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        components: miri
+    - name: miri test
+      run: cargo +nightly miri test --no-default-features -v -- --format=terse
+  wasm: 
+    runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: --cfg run_in_browser
+    steps:
+    - name: install wasm-pack
+      run: cargo install wasm-pack -vv
+    - name: wasm test
+      run: wasm-pack test --headless --firefox -- --no-default-features -vv 
   lint: 
     runs-on: ubuntu-latest
     env:
