--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,6 +90,7 @@ jobs:
       CARGO_INCREMENTAL: 0
     continue-on-error: true
     steps:
+    - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
@@ -101,6 +102,7 @@ jobs:
     env:
       RUSTFLAGS: --cfg run_in_browser
     steps:
+    - uses: actions/checkout@v2
     - name: install wasm-pack
       run: cargo install wasm-pack -vv
     - name: wasm test
