--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ rspirv = "0.11.0"
 flate2 = "1.0.25"
 hex = "0.4.3"
 rustversion = "1.0.12"
-clap = { version = "4.0.22", features = ["derive"] }
+clap = { version = "4.2.4", features = ["derive"] }
 fxhash = "0.2.1"
 
 [package]
@@ -107,6 +107,8 @@ serde_test = "1.0.160"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 libtest-mimic = "0.6.0"
+# removes broken is_terminal dep for libtest-mimic on windows
+clap.workspace = true
 rayon = "1.7.0"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
