--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -3,6 +3,7 @@ name = "krnl-core"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
+rust-version.workspace = true
 description = "Core library for krnl."
 documentation.workspace = true
 readme.workspace = true
