--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -3,6 +3,7 @@ name = "krnl-macros"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
+rust-version.workspace = true
 description = "Macros for krnl."
 documentation.workspace = true
 readme.workspace = true
