--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = ["benches/*", "tests/*", "xtask"]
 
 [workspace.package]
-version = "0.0.2-alpha"
+version = "0.0.2"
 authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
 rust-version = "1.64.0"
@@ -11,11 +11,11 @@ readme = "README.md"
 homepage = "https://github.com/charles-r-earp/krnl"
 repository = "https://github.com/charles-r-earp/krnl"
 license = "MIT OR Apache-2.0"
-publish = false
+publish = true
 
 [workspace.dependencies]
-krnl-macros = { path = "krnl-macros", version = "=0.0.2-alpha" }
-krnl-core = { path = "krnl-core", version = "=0.0.2-alpha" }
+krnl-macros = { path = "krnl-macros", version = "=0.0.2" }
+krnl-core = { path = "krnl-core", version = "=0.0.2" }
 krnl = { path = ".", default-features = false }
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 dry = "0.1.1"
@@ -53,7 +53,6 @@ autoexamples = false
 autotests = false
 autobenches = false
 
-
 [dependencies]
 krnl-macros.workspace = true
 krnl-core.workspace = true
@@ -74,7 +73,6 @@ dashmap = { version = "5.3.4", optional = true }
 rspirv = { workspace = true, optional = true }
 fxhash = { workspace = true, optional = true }
 serde_bytes = "0.11.9"
-
 
 #[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 #ash-molten = { version = "0.13.1", features = ["external"], optional = true }
