--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,12 +80,12 @@ serde_bytes = "0.11.9"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 vulkano = { version = "0.33.0", optional = true, default-features = false }
 ash = { version = "0.37.1", optional = true }
-atomicbox = { version = "0.4.0", optional = true }
+crossbeam-channel = { version = "0.5.8", optional = true }   
 
 [features]
 default = ["device"]
 # Enables device functionality. Not supported on the web.
-device = ["dep:vulkano", "dep:ash", "dep:dashmap", "dep:rspirv", "dep:atomicbox", "dep:fxhash"]
+device = ["dep:vulkano", "dep:ash", "dep:dashmap", "dep:rspirv", "dep:fxhash", "crossbeam-channel"]
 
 [package.metadata.krnlc]
 default-features = false
