--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,6 +101,7 @@ path = "tests/integration_tests.rs"
 harness = false
 
 [dev-dependencies]
+serde_json = "1.0.96"
 serde_test = "1.0.160"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
