--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -23,16 +23,16 @@ paste.workspace = true
 dry.workspace = true
 
 [target.'cfg(not(target_arch = "spirv"))'.dependencies]
-glam = "0.22.0"
-num-traits = "0.2.14"
-half = { version = "2.1.0", features = ["num-traits", "bytemuck", "serde"] }
-bytemuck = "1.4.1"
+glam.workspace = true
+num-traits.workspace = true
+half = { workspace = true, features = ["bytemuck", "serde"] }
+bytemuck.workspace = true
 serde = { version = "1.0.143", features = ["derive"] }
 thiserror = "1.0.32"
 derive_more = { version = "0.99.11", default-features = false, features = ["display", "is_variant"] }
 paste.workspace = true
 
 [target.'cfg(target_arch = "spirv")'.dependencies]
-glam = { version = "0.22.0", default-features = false, features = ["libm"] }
-num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
-half = { version = "2.1.0", default-features = false, features = ["num-traits", "bytemuck"] }
+glam = { workspace = true, default-features = false, features = ["libm"] }
+num-traits = { workspace = true, default-features = false, features = ["libm"] }
+half.workspace = true
