--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -23,7 +23,7 @@ paste.workspace = true
 dry.workspace = true
 
 [target.'cfg(not(target_arch = "spirv"))'.dependencies]
-glam.workspace = true
+#glam.workspace = true
 num-traits.workspace = true
 half = { workspace = true, features = ["bytemuck", "serde"] }
 bytemuck.workspace = true
@@ -33,6 +33,6 @@ derive_more = { version = "0.99.11", default-features = false, features = ["disp
 paste.workspace = true
 
 [target.'cfg(target_arch = "spirv")'.dependencies]
-glam = { workspace = true, default-features = false, features = ["libm"] }
+#glam = { workspace = true, default-features = false, features = ["libm"] }
 num-traits = { workspace = true, default-features = false, features = ["libm"] }
 half.workspace = true
