--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,11 +80,9 @@ jobs:
           toolchain: nightly-2023-03-04
           components: rust-src, rustc-dev, llvm-tools-preview
       - name: install krnlc
-        run: cargo +nightly-2023-03-04 install --path krnlc --root . --no-default-features --features use-installed-tools -vv --debug
+        run: cargo +nightly-2023-03-04 install --path krnlc --root . --locked --no-default-features --features use-installed-tools -vv --debug
       - name: krnlc check 
         run: ./bin/krnlc --check -p krnl -p krnlc-tests -p compute-benchmarks -v
-      - name: krnlc non-semantic-info
-        run: ./bin/krnlc --non-semantic-info -p krnl -p krnlc-tests -p compute-benchmarks -v
   miri:
     runs-on: ubuntu-latest
     env:
