--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = ["benches/*", "tests/*"]
 
 [workspace.package]
-version = "0.0.3-alpha"
+version = "0.0.3"
 authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
 rust-version = "1.64.0"
@@ -11,11 +11,11 @@ readme = "README.md"
 homepage = "https://github.com/charles-r-earp/krnl"
 repository = "https://github.com/charles-r-earp/krnl"
 license = "MIT OR Apache-2.0"
-publish = false
+publish = true
 
 [workspace.dependencies]
-krnl-macros = { path = "krnl-macros", version = "=0.0.3-alpha" }
-krnl-core = { path = "krnl-core", version = "=0.0.3-alpha" }
+krnl-macros = { path = "krnl-macros", version = "=0.0.3" }
+krnl-core = { path = "krnl-core", version = "=0.0.3" }
 krnl = { path = ".", default-features = false }
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 dry = "0.1.1"
