--- a/krnlc/Cargo.toml
+++ b/krnlc/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "krnlc"
-version = "0.0.3-alpha"
+version = "0.0.3"
 authors = ["Charles R Earp <charles-r-earp@gmail.com>"]
 edition = "2021"
 description = "Kernel compiler for krnl."
@@ -10,7 +10,7 @@ documentation = "https://docs.rs/krnl"
 readme = "../README.md"
 homepage = "https://github.com/charles-r-earp/krnl"
 license = "MIT OR Apache-2.0"
-publish = false
+publish = true
 autoexamples = false
 autotests = false
 autobenches = false
