--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,10 +68,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: build
         run: cargo build -v
-        continue-on-error: true
       - name: test
         run: cargo test --no-default-features -p krnl -p krnlc-tests -v -- --format=terse
-        continue-on-error: true
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
@@ -80,17 +78,19 @@ jobs:
           toolchain: nightly-2023-04-15
           components: rust-src, rustc-dev, llvm-tools-preview
       - name: check krnlc
+        if: ${{ !canceled() }}
         run: cargo +nightly-2023-04-15 -Zunstable-options -C=krnlc check --locked --no-default-features --features use-installed-tools -vv
       - name: install krnlc
+        if: ${{ !canceled() }}
         run: cargo +nightly-2023-04-15 install --path krnlc --root . --locked --no-default-features --features use-installed-tools -vv --debug
       - name: krnlc check 
+        if: ${{ !canceled() }}
         run: ./bin/krnlc --check -p krnl -p krnlc-tests -p compute-benchmarks -v
   miri:
     runs-on: ubuntu-latest
     env:
       RUST_BACKTRACE: 1
       CARGO_INCREMENTAL: 0
-    continue-on-error: true
     steps:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
@@ -126,19 +126,17 @@ jobs:
         components: rustfmt, clippy, rust-src, rustc-dev, llvm-tools-preview
     - name: fmt
       run: cargo fmt --check
-      continue-on-error: true
     - name: clippy
+      if: ${{ !canceled() }}
       run: cargo clippy -- -D warnings
-      continue-on-error: true
     - name: krnlc fmt
+      if: ${{ !canceled() }}
       run: cargo +nightly-2023-04-15 fmt --check --manifest-path krnlc/Cargo.toml
-      continue-on-error: true
     - name: krnlc clippy
+      if: ${{ !canceled() }}
       run: cargo +nightly-2023-04-15 clippy --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v -- -D warnings
-      continue-on-error: true
   cargo-deny:    
     runs-on: ubuntu-latest    
-    continue-on-error: true
     steps:
     - uses: actions/checkout@v2
     - uses: EmbarkStudios/cargo-deny-action@v1
