--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,3 +110,4 @@ rayon = "1.7.0"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3.33"
+web-sys = { version = "0.3.65", default-features = false, features = ["console"] }
