--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -33,5 +33,5 @@ derive_more = { workspace = true, default-features = false, features = ["is_vari
 rustversion.workspace = true
 fxhash.workspace = true
 semver = "1.0.17"
-base64 = "0.21.5"
+zero85 = "0.2.0"
 
