Add commit sha to krnlc version + krnlc version and debug_printf to cache.

--- a/krnlc/Cargo.toml
+++ b/krnlc/Cargo.toml
@@ -17,6 +17,7 @@ autobenches = false
 
 [build-dependencies]
 rustversion = "1.0.12"
+vergen = { version = "8.2.6", features = ["git", "gitcl"] }
 
 [dependencies]
 clap = { version = "4.2.4", features = ["derive"] }
