--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,7 +73,7 @@ jobs:
       - name: test
         run: cargo test --no-default-features -p krnl -p krnlc-tests -v -- --format=terse
       - name: test docs
-        run: cargo test --docs
+        run: cargo test --doc
       - name: test krnlc-tests
         run: cargo test -p krnlc-tests
       - name: check compute-benches
