--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,8 @@ autobenches = false
 [dependencies]
 krnl-macros.workspace = true
 krnl-core.workspace = true
-serde = { workspace = true, default-features = false, features = ["derive", "rc"] }
+serde = { workspace = true, default-features = false, features = ["derive", "rc"], optional = true }
+serde_bytes = { version = "0.11.9", optional = true }
 anyhow.workspace = true
 half = { workspace = true, features = ["std"] }
 num-traits = { workspace = true, features = ["std"] }
@@ -68,12 +69,11 @@ thiserror.workspace = true
 parking_lot = "0.12.1"
 once_cell = { version = "1.13.0", default-features = false, features = ["std", "alloc"] }
 bytemuck.workspace = true
-bincode2.workspace = true
 flate2.workspace = true
 dashmap = { version = "5.3.4", optional = true }
 rspirv = { workspace = true, optional = true }
 fxhash = { workspace = true, optional = true }
-serde_bytes = "0.11.9"
+
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 vulkano = { version = "0.33.0", optional = true, default-features = false }
@@ -84,6 +84,7 @@ crossbeam-channel = { version = "0.5.8", optional = true }
 default = ["device"]
 # Enables device functionality. Not supported on the web.
 device = ["dep:vulkano", "dep:ash", "dep:dashmap", "dep:rspirv", "dep:fxhash", "dep:crossbeam-channel"]
+serde = ["dep:serde", "dep:serde_bytes", "krnl-core/serde"]
 
 [package.metadata.krnlc]
 default-features = false
@@ -99,6 +100,7 @@ path = "tests/integration_tests.rs"
 harness = false
 
 [dev-dependencies]
+bincode2.workspace = true
 serde_json = "1.0.96"
 serde_test = "1.0.160"
 
@@ -106,7 +108,6 @@ serde_test = "1.0.160"
 libtest-mimic = "0.6.0"
 # removes broken is_terminal dep for libtest-mimic on windows
 clap.workspace = true
-rayon = "1.7.0"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3.33"
