--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 members = ["benches/*", "tests/*"]
 
 [workspace.package]
-version = "0.0.4-alpha"
+version = "0.0.4"
 authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
-rust-version = "1.64.0"
+rust-version = "1.70.0"
 documentation = "https://docs.rs/krnl"
 readme = "README.md"
 homepage = "https://github.com/charles-r-earp/krnl"
@@ -14,8 +14,8 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [workspace.dependencies]
-krnl-macros = { path = "krnl-macros", version = "=0.0.4-alpha" }
-krnl-core = { path = "krnl-core", version = "=0.0.4-alpha" }
+krnl-macros = { path = "krnl-macros", version = "=0.0.4" }
+krnl-core = { path = "krnl-core", version = "=0.0.4" }
 krnl = { path = ".", default-features = false }
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 dry = "0.1.1"
@@ -72,7 +72,6 @@ flate2.workspace = true
 dashmap = { version = "5.3.4", optional = true }
 rspirv = { workspace = true, optional = true }
 fxhash = { workspace = true, optional = true }
-
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 vulkano = { version = "0.33.0", optional = true, default-features = false }
