undo removal of prerelease version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = ["benches/*", "tests/*"]
 
 [workspace.package]
-version = "0.0.4"
+version = "0.0.4-alpha"
 authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
 rust-version = "1.70.0"
@@ -14,8 +14,8 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [workspace.dependencies]
-krnl-macros = { path = "krnl-macros", version = "=0.0.4" }
-krnl-core = { path = "krnl-core", version = "=0.0.4" }
+krnl-macros = { path = "krnl-macros", version = "=0.0.4-alpha" }
+krnl-core = { path = "krnl-core", version = "=0.0.4-alpha" }
 krnl = { path = ".", default-features = false }
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 dry = "0.1.1"
