--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -105,14 +105,15 @@ jobs:
       run: cargo +nightly miri test --no-default-features --features serde -v -- --format=terse
   wasm: 
     runs-on: ubuntu-latest
-    env:
-      RUSTFLAGS: --cfg run_in_browser
     steps:
     - uses: actions/checkout@v2
     - name: install wasm-pack
       run: cargo install wasm-pack -vv
     - name: wasm test
-      run: wasm-pack test --headless --firefox -- --no-default-features -vv 
+      run: wasm-pack test --headless --firefox -- --no-default-features -vv
+      env: 
+        RUSTFLAGS: --cfg run_in_browser
+        
   lint: 
     runs-on: ubuntu-latest
     env:
@@ -141,7 +142,7 @@ jobs:
       run: cargo +nightly-2023-05-27 clippy --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v -- -D warnings
     - name: rustdoc
       if: ${{ !cancelled() }}
-      run: cargo rustdoc -- --D warnings
+      run: cargo rustdoc --all-features -- --D warnings
   cargo-deny:    
     runs-on: ubuntu-latest    
     steps:
