--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -150,4 +150,4 @@ jobs:
     - uses: EmbarkStudios/cargo-deny-action@v1
     - uses: EmbarkStudios/cargo-deny-action@v1
       with:         
-        arguments: "--manifest-path krnlc/Cargo.toml"
+        manifest-path: "krnc/Cargo.toml"
