--- a/tests/krnlc-tests/Cargo.toml
+++ b/tests/krnlc-tests/Cargo.toml
@@ -12,6 +12,11 @@ krnl = { workspace = true, default-features = false }
 paste.workspace = true
 dry.workspace = true
 
+[features]
+device = ["krnl/device"]
+shader_int8 = []
+shader_float64 = []
+
 [package.metadata.krnlc.dependencies]
 paste = {}
 dry = {}
