--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,7 @@ path = "tests/integration_tests.rs"
 harness = false
 
 [dev-dependencies]
+kernel-tests = { path = "tests/kernel-tests" }
 bincode2.workspace = true
 serde_json = "1.0.96"
 serde_test = "1.0.160"
