--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: build
         if: ${{ !cancelled() }}
-        run: cargo build --workspace --all-features --all-targets -v
+        run: cargo build --workspace --features "serde ocl" --all-targets -v
       - name: test
         if: ${{ !cancelled() }}
         run: cargo test --workspace --no-default-features --features serde  -v -- --format=terse
