ci concurrency + cancel-in-progress

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,4 @@
-
 name: CI
-
 on:
   push:
     paths-ignore:
@@ -8,12 +6,13 @@ on:
   pull_request:
     paths-ignore:
       - '**.md'
-
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
   CARGO_INCREMENTAL: 0
-
 jobs:
   test:
     runs-on: ${{ matrix.os }}
