--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,13 @@
 name: CI
 on:
   push:
+    branches:
+      - main
     paths-ignore:
       - '**.md'
   pull_request:
+    branches:
+      - "**"
     paths-ignore:
       - '**.md'
 concurrency:
