--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -151,6 +151,12 @@ jobs:
     - name: rustdoc
       if: ${{ !cancelled() }}
       run: cargo rustdoc --all-features -- --D warnings
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: 1.70.0
     - name: msrv
       if: ${{ !cancelled() }}
       run: |
